metro.log

Welcome to React Native v0.85
Starting dev server on http://localhost:8081


                        ▒▒▓▓▓▓▒▒
                     ▒▓▓▓▒▒░░▒▒▓▓▓▒
                  ▒▓▓▓▓░░░▒▒▒▒░░░▓▓▓▓▒
                 ▓▓▒▒▒▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▓▓
                 ▓▓░░░░░▒▓▓▓▓▓▓▒░░░░░▓▓
                 ▓▓░░▓▓▒░░░▒▒░░░▒▓▒░░▓▓
                 ▓▓░░▓▓▓▓▓▒▒▒▒▓▓▓▓▒░░▓▓
                 ▓▓░░▓▓▓▓▓▓▓▓▓▓▓▓▓▒░░▓▓
                 ▓▓▒░░▒▒▓▓▓▓▓▓▓▓▒░░░▒▓▓
                  ▒▓▓▓▒░░░▒▓▓▒░░░▒▓▓▓▒
                     ▒▓▓▓▒░░░░▒▓▓▓▒
                        ▒▒▓▓▓▓▒▒


 WARN  the transform cache was reset.
                Welcome to Metro v0.84.4
              Fast - Scalable - Integrated


 INFO  Dev server ready. Press Ctrl+C to exit.
 INFO  Interactive mode is not supported in this environment
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0% (0/1)
 BUNDLE  ./index.js ▓▓▓▓▓▓▓░░░░░░░░░ 49% (376/536)
 BUNDLE  ./index.js ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓░ 97% (784/817)
 BUNDLE  ./index.js 
 INFO  Launching DevTools...
 INFO  Launching DevTools...
 MAP  ./index.js ░░░░░░░░░░░░░░░░ 0% (0/1)
 MAP  ./index.js 
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0% (0/1)
 BUNDLE  ./index.js 
 ERROR  [timeout] connection terminated with Device for app='com.offlinefaceauth' on device='I2217 - 16 - API 36' after not responding for 60 seconds.
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0% (0/1)
 BUNDLE  ./index.js 
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0% (0/1)
 BUNDLE  ./index.js 
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0% (0/1)
 BUNDLE  ./index.js 
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0% (0/1)
 BUNDLE  ./index.js 
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0% (0/1)
 BUNDLE  ./index.js 
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0% (0/1)
 BUNDLE  ./index.js 
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0% (0/1)
 BUNDLE  ./index.js 
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0% (0/1)
 BUNDLE  ./index.js 
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0% (0/1)
 BUNDLE  ./index.js 
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0% (0/1)
 BUNDLE  ./index.js 
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0% (0/1)
 BUNDLE  ./index.js 
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0% (0/1)
 BUNDLE  ./index.js 
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0% (0/1)
 BUNDLE  ./index.js 
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0% (0/1)
 BUNDLE  ./index.js 
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0% (0/1)
 BUNDLE  ./index.js 
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0% (0/1)
 BUNDLE  ./index.js 
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0% (0/1)
 BUNDLE  ./index.js 
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0% (0/1)
 BUNDLE  ./index.js 
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0% (0/1)
 BUNDLE  ./index.js 
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0% (0/1)
 BUNDLE  ./index.js 
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0% (0/1)
 BUNDLE  ./index.js 
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0% (0/1)
 BUNDLE  ./index.js 
 ERROR  SyntaxError: /Users/srujan/Downloads/offline-face-auth/src/hooks/useLiveness.ts: Identifier 'useLiveness' has already been declared. (261:16)

  259 | }
  260 |
> 261 | export function useLiveness({
      |                 ^
  262 |   isActive,
  263 |   onVerified,
  264 |   onFailed,
 ERROR  SyntaxError: /Users/srujan/Downloads/offline-face-auth/src/hooks/useLiveness.ts: Identifier 'useLiveness' has already been declared. (242:16)

  240 |
  241 |
> 242 | export function useLiveness({
      |                 ^
  243 |   isActive,
  244 |   onVerified,
  245 |   onFailed,
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0% (0/1)
 BUNDLE  ./index.js 
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0% (0/1)
 BUNDLE  ./index.js 
 BUNDLE  ./index.js ░░░░░░░░░░░░░░░░ 0% (0/1)
 BUNDLE  ./index.js 
